[package]
name = "ruff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
prometheus = "0.13.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", default-features = false, features = ["rt", "time"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
